# evyatar-cpp-ex4

./: 1  Arena.cpp  Arena.h  CMakeLists.txt  Defencemen.cpp  Defencemen.h  Forwards.cpp  Forwards.h  Game.cpp  Game.h  Goalie.cpp  Goalie.h  Group.cpp  Group.h  Limits.cpp  Limits.h  Node.h  Player.cpp  Player.h  PlayerTree.h  Point.cpp  Point.h  SpeedVector.cpp  SpeedVector.h  Spot.cpp  Spot.h  Tree.h  main.cpp
foo/: args1  args2  args3  output2  output3
